# a-nice-terminal

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ANT-v3-plan.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  COPILOT.md  FINGERPRINTING.md  GEMINI.md  LICENSE  MMD-CHAT.md  NOTICE  NOTICE.md  PI.md  POSITIONING.md  QWEN.md  README.md  SECURITY.md  SKILLS.md  STYLE.md  ant-channel.ts  ant-runner-monitor.sh  ant.server.plist.example  constitution.md  messaging-concept-wording.html  package-lock.json  package.json  pnpm-lock.yaml  server.ts  serverSplit.md  svelte.config.js  test-api.cjs  vite.config.ts  vitest.config.ts  (+1 more)
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.playwright-cli/: page-2026-05-12T02-07-56-658Z.yml  page-2026-05-12T02-08-12-165Z.yml  page-2026-05-12T02-08-22-997Z.yml  page-2026-05-12T02-10-05-560Z.yml  page-2026-05-12T02-20-04-901Z.yml  page-2026-05-12T02-20-25-646Z.yml  page-2026-05-12T02-24-46-341Z.yml  page-2026-05-12T02-25-33-625Z.yml  page-2026-05-12T02-27-27-816Z.yml  page-2026-05-12T02-27-52-084Z.yml  page-2026-05-12T02-36-40-575Z.yml  page-2026-05-12T02-44-11-824Z.yml  page-2026-05-12T02-44-19-993Z.yml  page-2026-05-12T02-44-35-709Z.yml  page-2026-05-12T02-44-51-466Z.yml  (+42 more)
ant-capture/: ant.bash  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: local-only.json
src-tauri/src/: allowlist.rs  configcmd.rs  consent.rs  lib.rs  main.rs  poller.rs  pty.rs  router_sidecar.rs  strongholdcfg.rs
src-tauri/web/: index.html
(+3086 files in other folders)
