[package]
name = "ant-desktop"
version = "0.1.1"
description = "ANT thin-client desktop shell (m6.4)"
authors = ["ANT contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ant_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-stronghold = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
